--- a/views/layout.twig
+++ b/views/layout.twig
@@ -4,6 +4,18 @@
 
     </head>
     <body>
+        <header>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="/silex-wsf/public/">Home</a>
+                    </li>
+                    <li>
+                        <a href="/silex-wsf/public/admin">Admin</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
         <div id="content">{% block content %}{% endblock %}</div>
         <div id="footer">
         </div>
