--- a/views/user/login.twig
+++ b/views/user/login.twig
@@ -1,6 +1,10 @@
 {% extends "layout.twig" %}
 
 {% block content %}
+    {% if errors is defined %}
+        <p>Erreurs : </p>
+        <p>{{ errors }}</p>
+    {% endif %}
     <form action="{{ app.url_generator.generate('postLogin') }}" method="post">
         <label for="email">Email :</label>
         <input type="email" name="email" id="email" />
