--- a/views/home.twig
+++ b/views/home.twig
@@ -1,7 +1,7 @@
 {% extends "layout.twig" %}
 
 {% block content %}
-    <h1>Home</h1>
+    <h1><img src="./img/header.jpg"></h1>
     <section>
         {% for article in articles %}
             <article>
