--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,6 +5,7 @@ html {
 
 body {
 	background-color: #fff;
+	height: 100%;
 	margin: 0% 20%;
 }
 
@@ -17,14 +18,45 @@ h1 img {
 }
 
 h2 {
-	color: #222222;
+	padding-top: 20px;
+	margin: 0;
+}
+
+h2 a:visited {
+	color: #555555;
+}
+
+h2 a:link {
 	text-transform: uppercase;
+	font-weight:bold;
 	padding: 0% 4%;
+	color: #555555;
+	text-decoration:none;
+}
+
+h2 a:hover,a:active {
+	color:#000;
+}
+
+#content ul li a:visited {
+	color: #555555;
+}
+
+#content ul li a:link {
+	color: #555555;
+	text-decoration:none;
+	list-style-type: none;
+}
+
+#content ul li a:hover,a:active {
+	color:#222222;
 }
 
 p {
 	color: #333333;
+	margin-top: 0;
 	padding: 0% 2%;
+	text-align: justify;
 }
 
 nav {
@@ -58,4 +90,20 @@ nav a:link,a:visited {
 
 nav a:hover,a:active {
 	background-color:#C0392B;
+}
+
+#content form {
+	margin-top: 20px;
+}
+
+#title {
+	vertical-align: top;
+}
+
+#article {
+	vertical-align: top;
+}
+
+#tag {
+	vertical-align: top;
 }
