--- a/views/admin/article.twig
+++ b/views/admin/article.twig
@@ -1,6 +1,7 @@
 {% extends "layout.twig" %}
 
 {% block content %}
+<h1><img src="{{app.request.basepath}}/img/header.jpg"></h1>
 <form action="" method="post">
     <label for="title">Titre :</label>
     <input type="text" name="title" id="title" />
