--- a/views/home.twig
+++ b/views/home.twig
@@ -2,7 +2,7 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-    <h1><img src="./img/header.jpg"></h1>
+    <h1><img src="{{app.request.basepath}}/img/header.jpg"></h1>
     <section>
         {% for articleKey, article in articles %}
             <article>
