--- a/views/article.twig
+++ b/views/article.twig
@@ -2,7 +2,7 @@
 {% block title %}Article{% endblock %}
 
 {% block content %}
-    <h1><img src="{{app.request.basepath}}/img/header.jpg"></h1>
+    <h1><a href="{{app.request.basepath}}/index.php"><img src="{{app.request.basepath}}/img/header.jpg"></a></h1>
     <section>
             <article>
                 <h2>{{ article.title }}</h2>
